# Stepper-Indexer

./: .cproject  .project  README.md  sdkconfig
components/SSD1306/: CMakeLists.txt
components/SSD1306/include/: FontInfo.h  SSD1306.h  Softi2c.h
components/SSD1306/src/: FontInfo.c  SSD1306.c  Softi2c.c
components/SSD1306/src/Fonts/: Calibri12pt.c  Calibri18pt.c  Calibri8pt.c  LCD_5x7.c  SansSerif12pt.c  SansSerif8pt.c  SevenSeg10pt.c  Tahoma12pt.c  Tahoma8pt.c  Verdana12pt.c  Verdana18pt.c  Verdana8pt.c
main/: BT_Gatt.c  CMakeLists.txt  Display.c  Indexer.c  Kconfig.projbuild  StepperIndexer.c  StepperIndexer.h  UARTComms.c
